Updating manual and tutorial structure.

--- a/tutorial_TeX/RB_Biogeography_DEC_Tutorial/RB_Biogeography_DEC_Tutorial_content.tex
+++ b/tutorial_TeX/RB_Biogeography_DEC_Tutorial/RB_Biogeography_DEC_Tutorial_content.tex
@@ -674,7 +674,7 @@ This file summarizes the MCMC output from a RevBayes biogeographical analysis as
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=4in]{figures/bg_1_mrca}
+\includegraphics[width=4in]{\ResourcePath figures/bg_1_mrca}
 \caption{Phylowood frame showing posterior ancestral range of root node.}
 \end{figure}
 
@@ -688,7 +688,7 @@ The animation will play the timeframe corresponding to the slider.
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=4in]{figures/bg_1_tips}
+\includegraphics[width=4in]{\ResourcePath figures/bg_1_tips}
 \caption{Phylowood frame showing distribution of extant taxon ranges.}
 \end{figure}
 
@@ -716,7 +716,7 @@ Phylowood also offers a masking effect that persists until an unmask command is 
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=4in]{figures/bg_1_loris}
+\includegraphics[width=4in]{\ResourcePath figures/bg_1_loris}
 \caption{Phylowood frame highlighting the ancestral range for the MRCA extant lorises.}
 \end{figure}
 
@@ -882,7 +882,7 @@ This biologically and geographically informed model produces a more realistic ra
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=4in]{figures/bg_2_epoch}
+\includegraphics[width=4in]{\ResourcePath figures/bg_2_epoch}
 \caption{Phylowood frame showing Asian origin of primates, with subsequent dispersal into Africa and Americas.}
 \end{figure}
 
@@ -896,4 +896,8 @@ RevBayes_scripts/biogeography_epoch.Rev}
 \end{snugshade}
 
 which also produces the above Phylowood animation file.
+
+
+\bibliographystyle{sysbio}
+\bibliography{\ResourcePath bayes}
 
