--- a/tutorial_TeX/RB_Biogeography_many_area_Tutorial/RB_Biogeography_many_area_Tutorial_content.tex
+++ b/tutorial_TeX/RB_Biogeography_many_area_Tutorial/RB_Biogeography_many_area_Tutorial_content.tex
@@ -443,3 +443,7 @@ More data-exploration functions are found in {\tt bg\_parse.py}.
 \begin{itemize}
 \item (Under construction.)
 \end{itemize}
+
+
+\bibliographystyle{sysbio}
+\bibliography{\ResourcePath bayes}
