--- a/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content.tex
+++ b/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content.tex
@@ -27,7 +27,7 @@ For all of these substitution models, you will perform an MCMC analysis to estim
 For the sake of simplicity we will assume a simple birth-death tree prior and a known, fixed clock rate.
 All the assumptions will be covered more in detail later in this tutorial.
 
-\subsection*{Requirements}
+\subsection{Requirements}
 We assume that you have read and hopefully completed the following tutorials:
 \begin{itemize}
 \item RB\_Getting\_Started
