--- a/tutorial_TeX/RB_Data_Tutorial/RB_Data_Tutorial_content.tex
+++ b/tutorial_TeX/RB_Data_Tutorial/RB_Data_Tutorial_content.tex
@@ -18,14 +18,14 @@ We assume that you have read and hopefully completed the following tutorials:
 \subsection{Getting Started}
 
 
-\exs{Download data and output files from: \href{http://revbayes.github.io/tutorials.html}{http://revbayes.github.io/tutorials.html}}
+\exs{Download data files from: \href{http://revbayes.github.io/tutorials.html}{http://revbayes.github.io/tutorials.html}}
 \exs{Open the file \cl{primates\_cytb.nex} in your text editor. 
 This file contains the nucleotide sequences of the cytochrome B gene sampled from 13 species (Box 1). 
 The elements of the \cl{DATA} block indicate the data type, number of taxa, and sequence length.}
 
 
 \begin{center}
-Box 1: A fragment of the NEXUS file containing the ITS sequences for this exercise. \\
+Box 1: A fragment of the NEXUS file containing the cytochrome B sequences for this exercise. \\
 \end{center}
 {\tt \scriptsize \begin{framed}
 \begin{lstlisting}
