--- a/tutorial_TeX/RB_MCMC_Tutorial/RB_MCMC_Tutorial_content.tex
+++ b/tutorial_TeX/RB_MCMC_Tutorial/RB_MCMC_Tutorial_content.tex
@@ -498,3 +498,7 @@ For example, a correlation between \texttt{Likelihood} and \texttt{Posterior} is
 There are additional bonsai reports for more complex models demonstrating a wider array of MCMC pathologies in the \verb!.../RB_MCMC_Tutorial/bonsai_pre_cooked! directory.
 
 \definecolor{shadecolor}{RGB}{238,224,229}
+
+
+\bibliographystyle{sysbio}
+\bibliography{\ResourcePath refs}
