--- a/tutorial_TeX/RB_Manual.tex
+++ b/tutorial_TeX/RB_Manual.tex
@@ -19,6 +19,8 @@
 
 %\thispagestyle{plain}
 
+\frontmatter
+
 \title{\Huge \textbf{Statistical Phylogenetic Inference using RevBayes} }
 \author{
 Sebastian H{\"o}hna,
@@ -43,6 +45,11 @@ John P. Huelsenbeck
 
 \tableofcontents
 
+
+\include{preface}
+
+\mainmatter
+
 \def \GlobalResourcePath {./}
 
 \part{Getting Started with RevBayes}
@@ -51,7 +58,7 @@ John P. Huelsenbeck
 \def \ResourcePath {RB_Getting_Started/}
 \include{RB_Getting_Started/RB_Getting_Started_content}
 
-\chapter{Basic Commands}
+\chapter{Introduction to \RevBayes and \Rev}
 \def \ResourcePath {RB_Basics_Tutorial/}
 \include{RB_Basics_Tutorial/RB_Basics_Tutorial_content}
 
@@ -67,7 +74,7 @@ John P. Huelsenbeck
 \def \ResourcePath {RB_CTMC_Tutorial/}
 \include{RB_CTMC_Tutorial/RB_CTMC_Tutorial_content}
 
-\chapter{Data Partitioning}
+\chapter{Partitioned Data Analysis}
 \def \ResourcePath {RB_Partition_Tutorial/}
 \include{RB_Partition_Tutorial/RB_Partition_Tutorial_content}
 
@@ -90,18 +97,18 @@ John P. Huelsenbeck
 
 
 \part{Dating}
+
+\chapter{A Brief Introduction, Overview and Example of Dating, Calibration and Relaxed Clocks}
+\def \ResourcePath {RB_Dating_Tutorial/}
+\include{RB_Dating_Tutorial/RB_Dating_Tutorial_content}
+
 \chapter{Divergence Time Estimation}
 \def \ResourcePath {RB_DivergenceTime_Tutorial/}
 \include{RB_DivergenceTime_Tutorial/RB_DivergenceTime_Tutorial_content}
 
-\chapter{Node Calibration}
-\def \ResourcePath {RB_NodeCalibration_Tutorial/}
-\include{RB_NodeCalibration_Tutorial/RB_NodeCalibration_Tutorial_content}
-
-\chapter{Dating, Calibration and Relaxed Clocks}
-\def \ResourcePath {RB_Calibration_and_RelaxedClock_Tutorial/}
-\include{RB_Calibration_and_RelaxedClock_Tutorial/RB_RelaxedClock_Tutorial_content}
-
+%\chapter{Node Calibration}
+%\def \ResourcePath {RB_NodeCalibration_Tutorial/}
+%\include{RB_NodeCalibration_Tutorial/RB_NodeCalibration_Tutorial_content}
 
 
 
