--- a/tutorial_TeX/RB_NodeCalibration_Tutorial/RB_NodeCalibration_Tutorial_content.tex
+++ b/tutorial_TeX/RB_NodeCalibration_Tutorial/RB_NodeCalibration_Tutorial_content.tex
@@ -620,7 +620,7 @@ The root age can thus be given any parametric distribution over positive real nu
 
 \begin{figure}[h!]
 \centering
-\fbox{\includegraphics[width=6in]{\GlobalResourcePath RB_RelaxedClock_Tutorial/figures/calib_BDR_gm.eps}}
+\fbox{\includegraphics[width=6in]{\ResourcePath figures/calib_BDR_gm.eps}}
 \caption{\small The graphical model representation of the node-calibrated birth-death process in \RevBayes.}
 \label{m_BDCal:fig}
 \end{figure}
