updated links in dating tutorial

--- a/tutorial_TeX/RB_Dating_Tutorial/RB_Dating_Tutorial_content.tex
+++ b/tutorial_TeX/RB_Dating_Tutorial/RB_Dating_Tutorial_content.tex
@@ -4,7 +4,7 @@
 
 Central among the questions explored in biology are those that seek to understand the timing and rates of evolutionary processes. Accurate estimates of species divergence times are vital to understanding historical biogeography, estimating diversification rates, and identifying the causes of variation in rates of molecular evolution. 
 
-This tutorial will provide a general overview of divergence time estimation using fossil calibration and relaxed-clock model comparison in a Bayesian framework. The exercise will guide you through the steps necessary for estimating phylogenetic relationships and dating species divergences using the program \href{https://github.com/revbayes/revbayes}{\RevBayes}. 
+This tutorial will provide a general overview of divergence time estimation using fossil calibration and relaxed-clock model comparison in a Bayesian framework. The exercise will guide you through the steps necessary for estimating phylogenetic relationships and dating species divergences using the program \href{http://revbayes.github.io/}{\RevBayes}. 
 
 %\begin{figure}[h!]
 %\centering
@@ -22,9 +22,9 @@ The various exercises in this tutorial take you through the steps required to pe
 In addition, we have provided the output files for every exercise so you can verify your results. (Note that since the MCMC runs you perform will start from different random seeds, the output files resulting from your analyses \textit{will not} be identical to the ones we provide you.)
 
 \begin{framed}
-Download the starting tree file: \href{http://bit.ly/1AbDPGK}{http://bit.ly/1AbDPGK}
+Download the starting tree file: \href{http://bit.ly/1DnJKdB}{http://bit.ly/1DnJKdB}
 
-Download the alignment file: \href{http://bit.ly/1Gz4Drw}{http://bit.ly/1Gz4Drw}
+Download the alignment file: \href{http://bit.ly/1KdGsP2}{http://bit.ly/1KdGsP2}
 \end{framed}
 
 In this exercise, we will compare among different relaxed clock models and estimate a posterior distribution of calibrated time trees.
@@ -92,7 +92,7 @@ Create a directory called {\textcolor{red}{\cl{output}}} in your tutorial direct
 \end{framed}
 
 The only files you need for this exercise are now in the \cl{data} directory. Otherwise, you will create all of the \Rev~files specifying the models and analyses. 
-All of the \Rev~files you write for this tutorial are available on the \href{https://github.com/revbayes/revbayes_tutorial}{\RevBayes~Tutorial GitHub repository} at this URL: \href{http://bit.ly/1CWTRdF}{http://bit.ly/1CWTRdF}.
+All of the \Rev~files you write for this tutorial are available on the \href{https://github.com/revbayes/revbayes_tutorial}{\RevBayes~Tutorial GitHub repository} at this URL: \href{http://bit.ly/1e7Nzgv}{http://bit.ly/1e7Nzgv}.
 You can refer to these examples to verify your own work.
 
 \bigskip
@@ -170,7 +170,7 @@ Because of this, if you typed these lines in the \RevBayes~console, you would ge
 Since this code is intended to be in a sourced \Rev~file, we are assuming that you would initialize \cl{mi} before calling \cl{source("RevBayes\_scripts/m\_BDP\_Tree\_bears.Rev")}.
 
 We will use the parameterization of the birth-death process specifying the diversification and turnover.
-For a more detailed tutorial on the simple birth-death model, please refer to the tutorial in the \RevBayes~repository: \href{http://bit.ly/10UKeuq}{http://bit.ly/10UKeuq}.
+For a more detailed tutorial on the simple birth-death model, please refer to the tutorial in the \RevBayes~repository: \href{http://bit.ly/1McUEu5}{http://bit.ly/1McUEu5}.
 
 \textbf{\textit{Diversification}}
 
