--- a/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content_unconstrained.tex
+++ b/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content_unconstrained.tex
@@ -30,13 +30,13 @@ All the assumptions will be covered more in detail later in this tutorial.
 \subsection*{Requirements}
 We assume that you have read and hopefully completed the following tutorials:
 \begin{itemize}
-\item RB\_Getting\_Started
-\item RB\_Basics\_Tutorial
+\item \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Getting_Started/RB_Getting_Started.pdf}{Getting Started with \RevBayes}
+\item \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial.pdf}{Basic Introduction to \Rev~\& MCMC}
 \end{itemize}
-Note that the RB\_Basics\_Tutorial introduces the basic syntax of \Rev~but does not cover any phylogenetic models.
-You may skip the RB\_Basics\_Tutorial if you have some familiarity with \R.
+Note that the Basic Introduction introduces the basic syntax of \Rev~but does not cover any phylogenetic models.
+You may skip the this tutorial if you have some familiarity with \R.
 We tried to keep this tutorial very basic and introduce all the language concepts on the way.
-You may only need the RB\_Basics\_Tutorial for a more in-depth discussion of concepts in \Rev.
+You can refer to the Basic Introduction for a more in-depth discussion of concepts in \Rev.
 
 
 %%%%%%%%
@@ -44,19 +44,19 @@ You may only need the RB\_Basics\_Tutorial for a more in-depth discussion of con
 %%%%%%%%
 \section{Data and files}
 
-We provide the data file(s) which we will use in this tutorial.
+We provide the data file which we will use in this tutorial.
 You may want to use your own data instead.
-In the \cl{data} folder, you will find the following files
+Create a folder called \cl{data} and download the following files
 \begin{itemize}
 \item
-\cl{primates\_cytb.nex}: Alignment of the \textit{cytochrome b} subunit from 23 primates representing 14 of the 16 families (\textit{Indriidae} and \textit{Callitrichidae} are missing).
+\href{http://rawgit.com/revbayes/revbayes_tutorial/master/RB_CTMC_Tutorial/data/primates_cytb.nex}{\cl{primates\_cytb.nex}}: Alignment of the \textit{cytochrome b} subunit from 23 primates representing 14 of the 16 families (\textit{Indriidae} and \textit{Callitrichidae} are missing).
 \end{itemize}
 
 
 %
 %\subsection*{Analysis Functions}
 %
-\newpage
+%\newpage
 \FloatBarrier
 \section{Example: Character Evolution under the Jukes-Cantor Substitution Model}
 
@@ -70,7 +70,7 @@ The first section of this exercise involves:
 
 \begin{figure}[h!]
 \centering
-\fbox{\includegraphics[width=\textwidth,angle=0]{\ResourcePath figures/jc_graphical_model.pdf}}
+\fbox{\includegraphics[width=\textwidth,angle=0]{\ResourcePath figures/jc_graphical_model_unconstrained.pdf}}
 \caption{\small Graphical model representation of a simple phylogenetic model. 
 The graphical model shows the dependencies between the parameters.
 Here, the rate matrix $Q$ is a constant variable because it is fixed and does not depend on any parameters.
