--- a/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content_unconstrained.tex
+++ b/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content_unconstrained.tex
@@ -42,7 +42,7 @@ You can refer to the Basic Introduction for a more in-depth discussion of concep
 %%%%%%%%
 %%   Data   %%
 %%%%%%%%
-\section{Data and files}
+\section{Data and files}\label{Sec:data}
 
 We provide the data file of DNA sequences required for this tutorial.
 You may want to use your own data instead.
@@ -124,7 +124,7 @@ The next steps will walk you through the full specification of the model and MCM
 
 \subsection{Loading the Data}
 
-\noindent \\ \impmark Download data and output files (if you don't have them already) from: \href{http://revbayes.github.io/tutorials.html}{http://revbayes.github.io/tutorials.html}
+\noindent \\ \impmark You should have already downloaded the data files in Section \ref{Sec:data}. Links to additional files, including the scripts to run these analyses can be found on the \href{http://revbayes.github.io/tutorials.html}{\RevBayes~tutorials website}.
 
 
 First load in the sequences using the \cl{readDiscreteCharacterData()} function. 
@@ -224,7 +224,7 @@ moves[++mi] = mvSPR(topology, weight=1.0)
 \end{lstlisting}
 \end{snugshade*}}
 The weight specifies how often the move will be applied either on average per iteration or relative to all other moves.
-Have a look at the MCMC tutorial for more details about moves and MCMC strategies: \href{http://revbayes.github.io/tutorials.html}{http://revbayes.github.io/tutorials.html}
+Have a look at the \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_MCMC_Tutorial/RB_MCMC_Tutorial.pdf}{MCMC Diagnosis tutorial} for more details about moves and MCMC strategies (found on the \href{http://revbayes.github.io/tutorials.html}{\RevBayes~Tutorials Website}).
 
 
 Next we have to create a stochastic node for each of the $2N-3$ branches in our tree (where $N=$ \cl{n\_species}). 
@@ -283,7 +283,7 @@ Once the \cl{PhyloCTMC} model has been created, we can attach our sequence data 
 seq.clamp(data)
 \end{lstlisting}
 \end{snugshade*}}
-[Note that although we assume that our sequence data are random variables---they are realizations of our phylogenetic model---for the purposes of inference, we assume that the sequence data are ``clamped''.]
+(Note that although we assume that our sequence data are random variables---they are realizations of our phylogenetic model---for the purposes of inference, we assume that the sequence data are ``clamped''.)
 When this function is called, \RevBayes~sets each of the stochastic nodes representing the tips of the tree to the corresponding nucleotide sequence in the alignment. 
 This essentially tells the program that we have observed data for the sequences at the tips. 
 
@@ -373,7 +373,7 @@ Thus, it is important to use programs like \texttt{Tracer} \citep{Rambaut2011} t
 
 \noindent \\ \impmark Look at the file called \cl{output/primates\_cytb\_JC\_posterior.log} in \texttt{Tracer}.
 
-
+\bigskip
 \subsection{Exercise 1}
 
 We are interested in the phylogenetic relationship of the Tarsiers. Therefore, we need to summarize the trees sampled from the posterior distribution.
