--- a/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content_unconstrained.tex
+++ b/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content_unconstrained.tex
@@ -102,7 +102,7 @@ It may seem like a lot of calculations, but the specification and computation of
 Here we only provide some of the equations for the models in case you might be interested in the details.
 You will be able to complete the exercises without delving too deeply into the underlying math.
 
-
+\newpage
 \noindent \\ \impmark It is important to note that you can run all of the \Rev~commands from a \RevBayes~script file \cl{source()} function in the \RevBayes~console. If you create a file called \cl{JukesCantor.Rev} and save all of the commands in this file, run the analysis by calling this function:
 {\tt \begin{snugshade*}
 \begin{lstlisting}
