--- a/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_unconstrained.tex
+++ b/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_unconstrained.tex
@@ -11,8 +11,8 @@
 \begin{center}
 
 \textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
-\textbf{\it{\Large Substitution Models}}\\\vspace{2mm}
-{\it {\Large for Unconstrained Trees}}\\\vspace{2mm}
+\textbf{\it{\Large Substitution Models for Unconstrained Trees}}\\\vspace{2mm}
+%{\it {\Large for Unconstrained Trees}}\\\vspace{2mm}
 \vspace{1cm}
 {\Large Sebastian H{\"o}hna, Michael Landis, Tracy Heath and Brian Moore}
 \vspace{1cm}
